[project]
name = "l2rpn-2023-ljn-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "curriculumagent>=1.1.0",
    "cvxpy>=1.7.5",
    "grid2op>=1.11.0",
    "l2rpn-baselines>=0.8.0",
    "lightsim2grid>=0.13.1",
    "numpy>=1.24.3",
    "stable-baselines3>=2.4.1",
    "torch>=2.1.2",
]

[tool.uv]
override-dependencies = [
    "gymnasium>=0.28",
]
